--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
     <a class="homeLogo" [routerLink]="['/users']">{{ pageTitle }}</a>
   </h1>
 </div>
-<div class="users-container" class="container-fluid">
+<div class="users-container" class="container-fluid h-100">
   <router-outlet></router-outlet>
 </div>
