--- a/src/app/users/user-detail.component.css
+++ b/src/app/users/user-detail.component.css
@@ -1,6 +1,64 @@
+@import url("https://fonts.googleapis.com/css2?family=Vollkorn&display=swap");
 .backButton {
   font-weight: bold;
+  width: 100px;
 }
 .backButton:hover {
   color: #ffffff;
+}
+.main-container {
+  border: none;
+  margin: 0 !important;
+  padding: 0 !important;
+  background-color: #f5f5f5;
+  font-family: "Vollkorn", serif !important;
+  font-size: 20px;
+  /* background-image: url("../..//assets/images/bank.jpg");
+  background-size: cover;
+  background: rgba(0.3); */
+}
+.image-div {
+  height: 250px;
+  background-size: cover;
+  width: 250px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.info-container {
+  padding: 0 7%;
+}
+.user-info-container {
+  min-width: 40%;
+  align-items: center;
+  box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16), 0 4px 6px rgba(0, 0, 0, 0.45);
+  border-radius: 10px;
+  background-color: #ffffff;
+  max-height: 75%;
+}
+.card-info-container {
+  min-width: 50%;
+  align-items: center;
+  box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16), 0 4px 6px rgba(0, 0, 0, 0.45);
+  border-radius: 10px;
+  background-color: #ffffff;
+  font-family: "Vollkorn", serif !important;
+  font-size: 20px;
+}
+.user-information {
+  margin-bottom: 50px;
+}
+.image-card {
+  background-image: url("../..//assets/images/Card.jpg");
+  height: 250px;
+  background-size: cover;
+  width: 250px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.accountType {
+  font-size: 15px;
+  color: #00a3e0;
+}
+.accountsNumber {
+  font-size: 25px;
 }
