--- a/src/app/users/user-detail.component.html
+++ b/src/app/users/user-detail.component.html
@@ -1,47 +1,87 @@
-<div class="card">
-  <div class="card-header">
-    <div class="card-body">
-      <div class="row">
-        <div class="col-md-8">
-          <div class="row">
-            <div class="col-md-4">Name:</div>
-            <div class="col-md-8">
-              {{ user.FirstName + " " + user.LastName }}
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-4">Sex:</div>
-            <div class="col-md-8">
-              {{ user.Sex }}
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-4">Country:</div>
-            <div class="col-md-8">{{ user.Country + " " + user.City }}</div>
-          </div>
-          <div class="row">
-            <div class="col-md-4">Address:</div>
-            <div class="col-md-8">{{ user.Address }}</div>
+<div class="container-fluid h-100 main-container card">
+  <div class="backButtonContainer ml-3 mt-5">
+    <input
+      type="button"
+      class="btn btn-outline-warning backButton"
+      (click)="goBack()"
+      value="Back"
+    />
+  </div>
+  <div class="info-container justify-content-between d-flex mr-3 ml-3">
+    <div class="d-flex flex-column user-info-container mt-5">
+      <div
+        class="image-div mt-5 mb-5"
+        [ngStyle]="{
+          'background-image': 'url(' + user.imageUrl + ')'
+        }"
+      ></div>
+      <div
+        class="user-information d-flex flex-column justify-content-between w-75"
+      >
+        <div class="d-flex flex-row justify-content-between">
+          <div class="font-weight-bold">Name</div>
+          <div class="">
+            {{ user.FirstName + " " + user.LastName }}
           </div>
         </div>
-
-        <div class="col-md-4">
-          <img
-            class="center-block img-responsive"
-            [style.width.px]="200"
-            [style.margin.px]="2"
-            [src]="user.imageUrl"
-          />
+        <div class="d-flex flex-row justify-content-between">
+          <div class="font-weight-bold">Sex</div>
+          <div class="">
+            {{ user.Sex }}
+          </div>
+        </div>
+        <div class="d-flex flex-row justify-content-between">
+          <div class="font-weight-bold">Location</div>
+          <div class="">
+            {{ user.Country + " " + user.City }}
+          </div>
+        </div>
+        <div class="d-flex flex-row justify-content-between">
+          <div class="font-weight-bold mr-2">Address</div>
+          <div
+            class=""
+            style="
+              overflow: hidden;
+              white-space: nowrap;
+              text-overflow: ellipsis;
+            "
+          >
+            {{ user.Address }}
+          </div>
         </div>
       </div>
     </div>
-    <div class="backButtonContainer">
-      <input
-        type="button"
-        class="btn btn-outline-warning backButton"
-        (click)="goBack()"
-        value="Back"
-      />
+    <div class="card-info-container d-flex flex-column mt-5">
+      <div class="image-card mt-5 mb-5"></div>
+      <h3>My Accounts:</h3>
+      <div
+        *ngFor="let account of user.Accounts"
+        class="d-flex w-75 justify-content-center"
+      >
+        <div class="d-flex flex-column mr-5">
+          <span class="font-weight-bold accountsNumber">{{
+            account.AccountsNumber
+          }}</span>
+          <span class="accountType">{{ account.AccountType }}</span>
+        </div>
+        <div class="d-flex flex-column mr-5">
+          <span class="font-weight-bold accountsNumber">{{
+            account.Currency
+          }}</span>
+          <span
+            [ngStyle]="{
+              color:
+                account.AccountStatus === 'Active'
+                  ? 'green'
+                  : account.AccountStatus === 'Closed'
+                  ? 'red'
+                  : null
+            }"
+            class="accountType mb-3"
+            >{{ account.AccountStatus }}</span
+          >
+        </div>
+      </div>
     </div>
   </div>
 </div>
